--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -301,9 +301,9 @@ span.cm-def.cm-hmd-frontmatter {
 
 .frontmatter-collapse-indicator {
   &:hover {
-    color: var(--primary);
+    color: var(--secondary);
   }
-  color: var(--primary);
+  color: var(--secondary);
 }
 
 .tag {
